# auth-service

./: .env.example  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: build.yml
fe/: package-lock.json  package.json
fe/src/app/: page.js
migrations/: 000001_init.down.sql  000001_init.up.sql
src/: lib.rs  main.rs
src/ctx/: mod.rs
src/database/: error.rs  mod.rs
src/http/: auth.rs  error.rs  mod.rs
src/http/middleware/: jwt.rs
src/http/request/: google.rs  user.rs
src/http/response/: mod.rs  user.rs
src/model/: error.rs  mod.rs  user.rs
src/pkg/: hmac.rs  hotp.rs  mod.rs
src/pkg/util/: mod.rs  rand.rs
src/repository/: user.rs
src/service/: constant.rs  error.rs  mod.rs  user.rs
src/service/auth/: google.rs
