[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "uuid",
  "time",
] }
# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# Axum
axum = "0.7.3"
tower-http = { version = "0.5", features = ["fs"] }
axum-extra = { version = "0.9.1", features = ["cookie"] }
# Others
async-trait = "0.1"
strum_macros = "0.25"
uuid = { version = "1", features = ["v4", "fast-rng"] }
chrono = "0.4.11"
dotenv = "0.15.0"
bcrypt = "0.15.0"
anyhow = "1.0.79"
thiserror = "1.0.56"
log = "0.4.20"
oauth2 = "4.4.2"
reqwest = { version = "0.11.23", features = ["json"] }
cookie = "0.18.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hmac = "0.12.1"
sha2 = "0.10.8"
sha1 = "0.10.6"
rand = "0.8.5"
jsonwebtoken = "9.2.0"
